--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
   <properties>
     <encoding>UTF-8</encoding>
-    <java.version>1.8</java.version>
+    <java.compiler.version>1.8</java.compiler.version>
     <scala.version>2.11.8</scala.version>
 
     <spark.version>2.0.2</spark.version>
@@ -50,8 +50,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <source>${java.compiler.version}</source>
+          <target>${java.compiler.version}</target>
         </configuration>
       </plugin>
     </plugins>
